# NI-KOP

./: README.md
homework/01/: CMakeLists.txt
homework/01/report/: index.adoc
homework/01/src/: Item.hpp  main.cpp
homework/01/src/strategy/: BnbStrategy.hpp  BruteForceStrategy.hpp  Strategy.hpp
homework/02/: .gitignore
homework/02/src/solver/: BnbSolver.hpp  FptasSolver.hpp  SolverFactory.hpp
homework/03/: .gitignore  CMakeLists.txt
homework/03/generator/: kg2  kg_perm
homework/03/report/: data.xlsx  index.adoc
homework/03/src/solver/: Solver.hpp
homework/04/: CMakeLists.txt
homework/04/report/: data.xlsx  index.adoc
homework/04/src/: Bag.hpp  Chromosome.hpp  main.cpp
homework/04/src/solver/: GaSolver.hpp  Solver.hpp
homework/05/: .gitignore  CMakeLists.txt  Makefile
homework/05/measurements/: script.sh
homework/05/report/: data.xlsx  index.adoc  params.xlsx
homework/05/report/params/: cross-10.csv  cross-20.csv  cross-30.csv  cross-40.csv  cross-50.csv  cross-60.csv  cross-70.csv  cross-70x.csv  cross-80.csv  cross-90.csv  dc-x.csv  dc.csv  normal-x.csv  normal.csv
homework/05/src/: Chromosome.hpp  GaSolver.hpp  Loader.hpp  main.cpp
homework/05/src/SAT/: Clause.hpp  Formula.hpp
homeworks/01/: CMakeLists.txt  Makefile
homeworks/01/src/: Bag.hpp  BagSolver.hpp  BagSolverMethod.hpp  DecisionResult.hpp  main.cpp
homeworks/01/src/strategy/: BnbStrategy.hpp  BruteForceStrategy.hpp  Strategy.hpp
homeworks/02/: .editorconfig  CMakeLists.txt
homeworks/02/report/: data.xlsx  index.adoc
homeworks/02/src/: Bag.hpp  BagSolver.hpp  Item.hpp  SolverResult.hpp  main.cpp
homeworks/02/src/solver/: BfSolver.hpp  BnbSolver.hpp  DynSolver.hpp  FptasSolver.hpp  GreedySolver.hpp  Solver.hpp  SolverFactory.hpp
homeworks/03/: Makefile
homeworks/03/generator/: generatorion.sh
homeworks/03/src/: main.cpp
homeworks/03/src/solver/: SolverFactory.hpp
